[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true
